// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewMessage when there is no text in the input should show an input for message and a disabled send button 1`] = `
<div
  className="NewMessage"
>
  <form
    className="NewMessage__container"
    onSubmit={[Function]}
  >
    <input
      className="NewMessage__input"
      maxLength="256"
      onChange={[Function]}
      placeholder=" Message"
      required={true}
      type="text"
      value=""
    />
    <button
      className="NewMessage__button"
      type="submit"
    >
      Send
    </button>
  </form>
</div>
`;

exports[`NewMessage when there is text in the input should show an input for message and a send button 1`] = `
<div
  className="NewMessage"
>
  <form
    className="NewMessage__container"
    onSubmit={[Function]}
  >
    <input
      className="NewMessage__input"
      maxLength="256"
      onChange={[Function]}
      placeholder=" Message"
      required={true}
      type="text"
      value="Whats up doc?"
    />
    <button
      className="NewMessage__button"
      type="submit"
    >
      Send
    </button>
  </form>
</div>
`;
